# Txt-Visual-Seperator

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
output/: index.css  person.html  winter.html
src/: main.py
